Initial formatting of login page to match new ux renderings.

--- a/goldstone/static/i18n/po_files/English.po
+++ b/goldstone/static/i18n/po_files/English.po
@@ -704,11 +704,7 @@ msgstr ""
 #: loginPageView.js
 
 #: loginPageView.js
-msgid "Please Sign In"
-msgstr ""
-
-#: loginPageView.js
-msgid "Forgot Username or Password?"
+msgid "reset password"
 msgstr ""
 
 #: loginPageView.js
@@ -718,22 +714,12 @@ msgstr ""
 
 #: loginPageView.js
 msgctxt "loginpage"
-msgid "Enter Username"
-msgstr ""
-
-#: loginPageView.js
-msgctxt "loginpage"
 msgid "Password"
 msgstr ""
 
 #: loginPageView.js
 msgctxt "loginpage"
-msgid "Enter Password"
-msgstr ""
-
-#: loginPageView.js
-msgctxt "loginpage"
-msgid "Sign in"
+msgid "SIGN IN"
 msgstr ""
 
 #: loginPageView.js
